update insert product and filter product generate pdf
